# diana_filewatcher

./: Makefile  README  configure.ac
include/: CoFileWatcher.h  CoFileWatcherThread.h
src/: CoConsole.cc  CoConsole.h  CoFileWatcher.cc  CoFileWatcher.h  CoFileWatcherThread.cc  CoFileWatcherThread.h  Makefile  Makefile.am  main.cc  miCommandLineStd.cc  miCommandLineStd.h
